[gd_scene load_steps=16 format=3 uid="uid://cf5l07apvpcjl"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_ine2j"]
[ext_resource type="PackedScene" uid="uid://b6vw65653q1m1" path="res://Scenes/slime_spawner.tscn" id="2_fg0uw"]
[ext_resource type="PackedScene" uid="uid://jdtjknljlkyl" path="res://Scenes/Entities/Necromancer/Necromancer.tscn" id="3_3m4ne"]
[ext_resource type="PackedScene" uid="uid://5h3jsfgmmdng" path="res://Scenes/World/world.tscn" id="4_w66yn"]
[ext_resource type="PackedScene" uid="uid://cwbrbowvi40bb" path="res://Scenes/UI/ui.tscn" id="5_xllxj"]
[ext_resource type="PackedScene" uid="uid://cg5oebsjapbdm" path="res://Scenes/World/item_manager.tscn" id="6_oor7i"]
[ext_resource type="Script" path="res://Scenes/World/item_manager.gd" id="7_bil4h"]
[ext_resource type="Script" path="res://Scripts/World/EntityManager.gd" id="8_57uxh"]
[ext_resource type="PackedScene" uid="uid://blbs5jbyvy4o0" path="res://Scenes/Entities/Player/player.tscn" id="9_fgyfe"]
[ext_resource type="PackedScene" uid="uid://varswinkvv2k" path="res://Scenes/VFX/announcement.tscn" id="10_f1570"]
[ext_resource type="Script" path="res://Scripts/World/WorldBoundaries.gd" id="10_orrba"]
[ext_resource type="Script" path="res://Scripts/World/LevelManager.gd" id="11_2d06u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8gw0s"]
size = Vector2(185, 1279)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_24ikj"]
size = Vector2(218, 1916)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yyd73"]
size = Vector2(1919, 327)

[node name="Game" type="Node2D" node_paths=PackedStringArray("player", "ui", "item_manager")]
position = Vector2(371, 459)
script = ExtResource("1_ine2j")
player = NodePath("Player")
ui = NodePath("UI")
item_manager = NodePath("ItemManager")
slime_spawner = ExtResource("2_fg0uw")
necromancer = ExtResource("3_3m4ne")

[node name="Background" parent="." instance=ExtResource("4_w66yn")]
position = Vector2(834, -38)

[node name="UI" parent="." instance=ExtResource("5_xllxj")]

[node name="ItemManager" parent="." instance=ExtResource("6_oor7i")]
position = Vector2(-383, -546)
script = ExtResource("7_bil4h")

[node name="EntityManager" type="Node2D" parent="."]
script = ExtResource("8_57uxh")

[node name="Player" parent="." instance=ExtResource("9_fgyfe")]
position = Vector2(652, 237)
level_up_announcement = ExtResource("10_f1570")
speed = 400

[node name="WorldBoundaries" type="Node2D" parent="."]
script = ExtResource("10_orrba")

[node name="LeftBoundary" type="StaticBody2D" parent="WorldBoundaries"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBoundaries/LeftBoundary"]
position = Vector2(-463.5, 180)
shape = SubResource("RectangleShape2D_8gw0s")

[node name="RightBoundary" type="StaticBody2D" parent="WorldBoundaries"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBoundaries/RightBoundary"]
position = Vector2(1642, 182.5)
shape = SubResource("RectangleShape2D_8gw0s")

[node name="TopBoundary" type="StaticBody2D" parent="WorldBoundaries"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBoundaries/TopBoundary"]
position = Vector2(590, -347)
rotation = 1.5708
shape = SubResource("RectangleShape2D_24ikj")

[node name="Floor" type="StaticBody2D" parent="WorldBoundaries"]
position = Vector2(0, -193)

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBoundaries/Floor"]
position = Vector2(588.5, 659.5)
shape = SubResource("RectangleShape2D_yyd73")

[node name="LevelManager" type="Node" parent="."]
script = ExtResource("11_2d06u")

[node name="Necromancer" parent="." node_paths=PackedStringArray("seeking", "ground") instance=ExtResource("3_3m4ne")]
position = Vector2(1117, 91)
seeking = NodePath("../Player")
ground = NodePath("../WorldBoundaries/Floor")

[connection signal="boss_fight" from="LevelManager" to="." method="_on_level_manager_boss_fight"]
[connection signal="experience_change" from="LevelManager" to="UI" method="_on_level_manager_experience_change"]
[connection signal="level_up" from="LevelManager" to="UI" method="_on_level_manager_level_up"]
[connection signal="level_up" from="LevelManager" to="Player" method="_on_level_manager_level_up"]
